# ledgerly

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  process-notes.md  pyproject.toml  render.yaml  tailwind.config.js
app/: config.py  main.py
app/exporters/: enriched_csv.py  sage_xlsx.py
app/jobs/: keepalive.py  scheduler.py  sweeper.py  weekly_recap.py
app/pipeline/: confidence.py  duplicate.py  extractor.py  llm.py  matcher.py  orchestrator.py
app/routes/: health.py  history.py  index.py  suppliers.py  upload.py  validation.py
app/services/: storage.py  supplier_memory.py  xlsx_naming.py
app/templates/: base.html  history.html  queue.html  suppliers.html  upload.html  validation_detail.html
app/templates/macros/: icons.html
app/templates/partials/: batch_banner.html  batch_row.html  batch_rows.html  new_client_inline.html  status_badge.html  toast.html
demo-pdfs/: README.md
docs/: checklist.md  learner-profile.md  prd.md  reflection.md  scope.md  spec.md
migrations/: 001_init.sql  002_clients_siret.sql
scripts/: build_css.sh  capture_demo_artifacts.py  generate_demo_pdfs.py  generate_fixture_pdf.py  seed_demo.py
static/css/: dist.css  input.css
tests/: test_confidence.py  test_duplicate.py  test_matcher.py  test_pipeline_smoke.py
